# go-towerfall

./: .env.example  .gitignore  BOT_MANAGEMENT_INTEGRATION.md  CLAUDE.md  README.md  TASK_4_2_IMPLEMENTATION_SUMMARY.md  Taskfile.yml  docker-compose.yaml  go.mod
bot2/: .gitignore  Dockerfile  README.md  pyproject.toml
bot2/config/: training.yaml
bot2/examples/: example_bot.py  game_client.py
bot2/src/bot/: __init__.py  actions.py
bot2/src/bot/agent/: __init__.py  network.py  ppo_trainer.py  rollout_buffer.py  serialization.py
bot2/src/bot/bots/: __init__.py  base_bot.py  neural_net_bot.py  rule_based_bot.py  shooting_utils.py
bot2/src/bot/cli/: __init__.py  __main__.py  main.py  run_tracker.py
bot2/src/bot/client/: __init__.py  game_client.py  http_client.py
bot2/src/bot/config/: __init__.py  ppo_config.py
bot2/src/bot/dashboard/: __init__.py  cli.py  (+3 more)
bot2/tests/: __init__.py  conftest.py  test_actions.py  test_env.py  test_game_client.py  test_http_client.py  test_models.py  test_observation.py  test_reward.py  test_rule_based_bot.py  test_shooting.py
bot2/tests/integration/: __init__.py  test_bot_manager_integration.py  test_env_integration.py  test_env_with_opponent.py  test_error_handling.py  test_full_episode_rollout.py  test_game_client_integration.py  test_performance_benchmarks.py  test_ppo_training_integration.py  test_server_connection.py  test_server_manager_integration.py  test_state_transitions.py  test_vectorized_env_integration.py  test_websocket_mode.py
bot2/tests/unit/: __init__.py  test_actions.py  test_env.py  test_game_client.py  test_http_client.py  test_map_encoder.py  test_models.py  test_network.py  test_neural_net_bot.py  test_observation.py  test_opponent_manager.py  test_ppo_config.py  test_ppo_trainer.py  test_rollout_buffer.py  test_serialization.py  test_server_manager.py  test_termination.py  test_vectorized_env.py
(+421 files in other folders)
